Admin/MediaCenter tag support; Admin/Layouts/PanelledEditor updates - prevent horizontal scrollbar; remove border radius curling underlines within tabs; "save as" option added to Admin/Sitemap pages

--- a/Admin/Layouts/MediaCenter/media-center.scss
+++ b/Admin/Layouts/MediaCenter/media-center.scss
@@ -6,6 +6,27 @@ $preview_size: 512px;
 
 .media-center {
 
+	&__tags {
+		padding:0;
+		margin: 0.5rem;
+	}
+
+	&__tag {
+		border-radius : 3px;
+		border : 1px solid #555;
+		padding : 3px;
+		background-color: #555;
+		display: inline;
+		color: $focal_reticle_color;
+		margin: 3px;
+
+		&-selected {
+			border : 1px solid #69b363;
+			padding : 3px;
+			background-color: #69b363;
+		}
+	}
+
 	&__list {
 		display: flex;
 		flex-wrap: wrap;
