--- a/Admin/Layouts/PanelledEditor/PanelledEditor.scss
+++ b/Admin/Layouts/PanelledEditor/PanelledEditor.scss
@@ -167,6 +167,7 @@
 		> button {
 			font-weight: 200;
 			padding: 0;
+			border-radius: 0;
 			border-bottom: 2px solid transparent;
 			color: currentColor;
 
@@ -256,6 +257,7 @@
 		> button {
 			font-weight: 200;
 			padding: 0;
+			border-radius: 0;
 			border-bottom: 2px solid transparent;
 			color: currentColor;
 
@@ -287,7 +289,8 @@
 	&__property-tab-content {
 		height: calc(100% - 47px + 8px);
 		padding: 0 16px;
-		overflow: auto;
+		overflow-y: auto;
+		overflow-x: hidden;
 	}
 	
 	.localized-field-label, 
