--- a/Admin/Layouts/Sitemap/Sitemap.scss
+++ b/Admin/Layouts/Sitemap/Sitemap.scss
@@ -29,6 +29,13 @@
 	}
 	*/
 
+	&__clone-modal-footer {
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+		gap: .5rem;
+	}
+
 }
 
 .sitemap-expander {
